--- a/changelog/breaking-changes-and-migration/breaking-changes.mdx
+++ b/changelog/breaking-changes-and-migration/breaking-changes.mdx
@@ -1,116 +1,168 @@
 ---
 title: "Breaking Changes"
-description: "Highlights any release that introduces changes incompatible with previous versions. For each breaking change, explains the impact, affected features, and high-level remediation steps."
+description: "Catalog of all breaking or backward-incompatible changes, from API removals to modified behaviors. Clear explanations ensure users can proactively refactor tests and supporting code before upgrading."
 ---
 
 # Breaking Changes
 
-This document details the significant breaking changes introduced in various releases of GoogleTest. It is designed to help users quickly identify any updates that are incompatible with previous versions, understand their impact, and follow high-level remediation steps to upgrade smoothly.
+The "Breaking Changes" page serves as a comprehensive catalog of all backward-incompatible changes introduced across GoogleMock and GoogleTest. These changes range from API removals to alterations in behavior that might affect your existing tests. By providing clear, actionable explanations and migration guidance, this page equips you to proactively adapt your test suites and mock setups before upgrading to newer versions.
 
 ---
 
-## What Are Breaking Changes?
+## Understanding Breaking Changes
 
-Breaking changes are modifications to GoogleTest's interfaces, behaviors, or internal mechanisms that may cause existing test code to fail to compile, behave differently, or produce different results without modification. These changes require users to adapt their code or configuration when upgrading.
+Breaking changes refer to modifications that may cause previously working code to fail or behave differently without updates. In the context of GoogleMock, this includes:
 
----
+- Removal or renaming of macros or functions such as `MOCK_METHODn` family or `MOCK_METHOD`.
+- Changes in syntax or semantics of existing mock-related macros.
+- Revisions to the behavior of mock strictness (e.g., how `NiceMock`, `StrictMock` behave).
+- Modifications in default actions or expectations processing.
+- Alterations in supporting utilities or classes that mock users rely on.
 
-## How to Use This Document
-
-- **Identify Version Differences:** Review the breaking changes listed for the version you are upgrading to.
-- **Understand Impact:** Examine the description to assess whether your code relies on affected features.
-- **Apply Remediation:** Follow the provided migration or workaround guidance to update your tests.
-- **Consult Further:** Refer to linked migration guides or detailed release notes for in-depth instructions.
-
----
-
-## Breaking Changes by Release
-
-### Release 1.17.0
-
-- **Minimum C++ Version Requirement**
-  - **Change:** GoogleTest 1.17.0 requires a minimum compiler support for C++17.
-  - **Impact:** Test projects targeting older C++ standards (e.g., C++11 or C++14) will fail to compile.
-  - **Remediation:** Upgrade your compiler and project settings to target at least C++17.
-  - **Reference:** For supported compilers and platforms, see [Supported Platforms](docs/platforms.md).
-
-- **Internal Port Header API Changes**
-  - **Change:** The internal header `gtest-port.h` introduced or adjusted macros and features to detect platform capabilities more rigorously.
-  - **Impact:** Code that previously tinkered with porting macros or build scripts defining these macros might need updates.
-  - **Remediation:** Review any customizations of `GTEST_HAS_*` macros and ensure they comply with new definitions.
-
-- **Death Test Style Default Change**
-  - **Change:** The recommended default for death test style is now "threadsafe" instead of the legacy "fast".
-  - **Impact:** Death tests may run slower but are more stable on multithreaded environments.
-  - **Remediation:** Consider explicitly setting `--gtest_death_test_style` flag if your tests rely on the old behavior.
-  - **Reference:** See [Death Tests Guide](guides/advanced-testing-patterns/death-test-guide.mdx) for configuration details.
+Understanding these changes is crucial to maintaining test health and avoiding runtime failures due to unexpected API modifications.
 
 ---
 
-## General Guidance on Breaking Changes
+## Impact on User Code
 
-1. **Strict Naming Rules for Tests:**
-   - GoogleTest enforces stricter naming rules for test suites and test names to avoid naming collisions and reserved identifier violations.
-   - Avoid underscores (`_`) in test suite and test names as previously warned in the FAQ to prevent future conflicts.
+### Migration Readiness
+Users should anticipate that breaking changes might require:
 
-2. **Assertion Behavior Refinements:**
-   - Adjustments have been made to assertion macros to better handle pointer comparisons and type safety.
-   - Prefer using `nullptr` over `NULL` in assertions for improved correctness.
+- Refactoring of existing mock declarations, especially when migrating from older `MOCK_METHODn` macros to the newer, unified `MOCK_METHOD` macro.
+- Adjusting expectations and default mock behaviors in response to changes in mock strictness handling or default actions.
+- Revisiting call expectations and matchers to align with updated semantics around argument matching and call sequences.
+- Updating test fixtures or mock classes if method qualifiers or signatures change.
 
-3. **Thread Safety Enhancements:**
-   - Increased thread-safety measures, especially around death tests and synchronization primitives.
-   - If you encounter flaky or hanging death tests, review the new thread-safety defaults and adjust test isolation accordingly.
-
-4. **Deprecations & Removals:**
-   - Some legacy macros or internal API usages may have been deprecated or removed.
-   - Check the linker errors or compilation warnings and replace deprecated usage with recommended alternatives.
+### Practical Tips for Smooth Upgrades
+- **Review Deprecated APIs**: Identify usage of older macros like `MOCK_CONST_METHODn` or `MOCK_METHODn` and plan to transition to `MOCK_METHOD`.
+- **Check Mock Method Qualifiers**: Ensure that overrides explicitly specify `const`, `override`, `noexcept`, or `Calltype` as required to maintain correctness.
+- **Test Strictness Modifiers**: Verify usage of `NiceMock`, `NaggyMock`, or `StrictMock` that control uninteresting call handling, as changes in their behavior can affect test outcomes.
+- **Validate Call Ordering**: If your tests rely on `InSequence` or `After` clauses, confirm that the partial and total call orders still hold.
+- **Pay Attention to Warnings and Errors**: GoogleMock provides warnings for uninteresting calls and unexpected behavior; treat these as cues to reassess expectations.
 
 ---
 
-## Migration Steps for Common Breaking Changes
+## Notable Breaking Changes by Category
 
-The following provides a high-level approach to migrating your code for known breaking changes:
+### 1. Transition from Old-Style `MOCK_METHODn` Macros to `MOCK_METHOD`
 
-### 1. Upgrading to C++17
+Legacy macros such as `MOCK_METHOD1`, `MOCK_CONST_METHOD0_T`, and variants with `_WITH_CALLTYPE` are superseded by the unified and more expressive `MOCK_METHOD` macro that accepts method qualifiers. Example transition:
 
-- Modify your build system config (CMake/Bazel/Makefile) to specify `-std=c++17` or equivalent.
-- Ensure all dependencies and libraries used by your tests are compatible with C++17.
+```cpp
+// Old style
+MOCK_CONST_METHOD1(Foo, bool(int));
 
-### 2. Adjusting for Death Test Style Changes
+// New style
+MOCK_METHOD(bool, Foo, (int), (const, override));
+```
 
-- Identify all death tests (`EXPECT_DEATH`, `ASSERT_DEATH`, `EXPECT_EXIT`, etc.).
-- Test with the "threadsafe" style by running your test binary with:
-  ```shell
-  ./your_test_binary --gtest_death_test_style=threadsafe
-  ```
-- If performance reverts or hangs occur, optionally force the legacy style by:
-  ```shell
-  ./your_test_binary --gtest_death_test_style=fast
-  ```
-- Update test fixtures to minimize thread creation outside of death test scopes.
+This change simplifies mocking declarations but requires explicit correct use of qualifiers. Wrapping parameter types with parentheses remains necessary when dealing with unprotected commas in types.
 
-### 3. Compliance with Test Name Restrictions
+### 2. More Explicit Qualifiers Required for Mock Methods
 
-- Ensure test suite and test names do not start or end with underscores.
-- Avoid multiple underscores causing ambiguous generated test class names.
-- Rename tests as necessary prior to upgrading.
-- Consult the FAQ on [Naming Restrictions](docs/faq.md#why-should-test-suite-names-and-test-names-not-contain-underscore).
+When mocking methods that are `const`, `noexcept`, have reference qualifiers (`&`, `&&`), or special calling conventions (`STDMETHODCALLTYPE` on Windows), the new `MOCK_METHOD` macro mandates specifying these as a fourth argument, e.g., `(const, noexcept, override, Calltype(STDMETHODCALLTYPE))`.
 
-### 4. Remove or Update Deprecated Macros
+### 3. Handling Uninteresting Calls and Mock Strictness
 
-- Replace any deprecated assertion macros with their modern equivalents.
-- Remove any direct usage of internal-only macros or APIs (those ending with `_` or in internal namespaces).
+The default behavior in gMock is to warn about uninteresting calls (mock calls without expectations). With the introduction of `NiceMock`, `StrictMock`, and `NaggyMock`, users gained control over these warnings and failures. Changes in internal behavior of these modifiers may require:
+
+- Reconsidering mock wrapper usage to avoid false positives or excessive failures.
+- Adjusting tests to add explicit expectations or use `NiceMock` to suppress unwanted warnings.
+
+### 4. Changes in Cardinality and Ordering of Expectations
+
+- Expectations remain "sticky" by default, meaning they remain active even after saturation unless `.RetiresOnSaturation()` is specified.
+- The precedence order of expectations is from last declared to first, to allow default catch-all expectations to be overridden by more specific ones.
+- Sequencing constructs (`InSequence`, `After`) now have stricter rules on clause order and usage in expectations, requiring review.
+
+### 5. Verifying and Clearing Expectations
+
+The introduction and specification behavior of `Mock::VerifyAndClearExpectations()` and `Mock::VerifyAndClear()` requires that users:
+
+- Call verification functions after exercise to avoid stale expectations causing test failures.
+- Not set expectations after verification without re-initializing mocks.
+
+### 6. Changes Affecting Action and Matcher Definitions
+
+- The `ON_CALL` and `EXPECT_CALL` macros have stricter syntax requirements concerning `.With()` and `.WillByDefault()` clauses.
+- Actions such as `Return()`, `ReturnRef()`, and complex custom actions require careful handling if return types have changed or parameters utilize move-only or template types.
+
+---
+
+## Common Pitfalls and How to Avoid Them
+
+- **Missed Qualifiers**: Not specifying the correct qualifiers in `MOCK_METHOD` leads to compilation errors or unexpected behavior.
+- **Inconsistent Expectation Ordering**: Defining expectations in the wrong sequence can shadow more specific expectations.
+- **Using Deprecated Macros**: Continuing to use `MOCK_METHODn` or `MOCK_CONST_METHODn` macros without migrating will cause compatibility issues.
+- **Ignoring Uninteresting Calls Warning**: Suppressing warnings by adding indiscriminate `EXPECT_CALL` statements may lead to brittle tests.
+- **Failing to Use `RetiresOnSaturation()`**: Not marking expectations as retiring after use in sequential tests leads to saturation and unexpected failures.
+
+---
+
+## Step-by-Step Migration Guidance
+
+### 1. Audit Your Mock Classes
+- Search for any usage of old-style `MOCK_METHODn` macros.
+- Identify missing or incorrect qualifiers in `MOCK_METHOD` declarations.
+
+### 2. Refactor Mock Methods
+- Convert all legacy macro uses to the unified `MOCK_METHOD` macro.
+- Add explicit qualifiers such as `const`, `override`, `noexcept`.
+- Wrap complex parameter types with parentheses or use `using` aliases to simplify.
+
+### 3. Verify Expectations and Actions
+- Add explicit expectations for uninteresting calls that are valid to suppress warnings.
+- Review test cases that use `NiceMock`, `StrictMock`, and `NaggyMock` to ensure behavior matches your intent.
+- Use `.RetiresOnSaturation()` on expectations used in sequences.
+
+### 4. Test Ordering and Cardinalities
+- Check `.InSequence()` and `.After()` clauses for appropriate order.
+- Adjust test cases if unexpected call order causes failures.
+
+### 5. Run Tests with Verbosity
+- Use `--gmock_verbose=info` to inspect mock function calls.
+- Investigate warnings related to uninteresting or unexpected calls.
+
+### 6. Verify and Clear Mocks Properly
+- Ensure mocks are cleared and verified at appropriate times to avoid stale states.
+
+---
+
+## Troubleshooting Common Issues Related to Breaking Changes
+
+### Compilation Failures
+- Check for deprecated macro usage.
+- Verify qualifier syntax on `MOCK_METHOD`.
+
+### Unexpected Test Failures
+- Use verbose logging to trace mock calls.
+- Confirm expectations are registered before mock use.
+- Verify correct use of sequences and cardinalities.
+
+### Warning Overhead
+- Suppress unnecessary warnings by clarifying expectations or using `NiceMock`.
+
+### Linker and Runtime Problems
+- Ensure all mock definitions and constructors/destructors are correctly implemented and visible.
 
 ---
 
 ## Additional Resources
 
-- [Detailed Release Notes](http://github.com/google/googletest/releases) - for in-depth information on changes per release.
-- [Migration Guides](changelog/breaking-changes-and-migration/migration-guides) - specific steps for upgrading.
-- [FAQ](docs/faq.md) - for answers to common upgrade and usage questions.
-- [Death Tests Guide](guides/advanced-testing-patterns/death-test-guide.mdx) - for managing death test related changes.
-- [Supported Platforms](docs/platforms.md) - to verify environment compatibility.
+To better understand and manage breaking changes, consult:
+
+- [Mocking Reference](reference/mocking.html): Comprehensive details on macros, expectations, and mock behavior.
+- [gMock Cookbook](gmock_cook_book.md): In-depth recipes and explanations on mocking practices.
+- [gMock for Dummies](gmock_for_dummies.md): Beginner-friendly introduction to mocking with gMock.
+- [Mocking FAQ](docs/gmock_faq.md): Common user questions and advanced scenarios.
+- [Setting Expectations & Cardinalities](reference/mocking.html#EXPECT_CALL) and [Controlling Mock Strictness](api-reference/mocking/nice-strict-mocks.mdx)
 
 ---
 
-If you experience unexpected test failures or compilation errors after upgrading, carefully consult this document and the above resources. The GoogleTest community encourages reporting issues or questions on GitHub Discussions or Issues for further assistance.
+## Summary
+
+The Breaking Changes page empowers users to navigate the evolution of GoogleMock APIs and behaviors, providing guidance for migrating code with minimal disruption. By understanding removal of old macros, enhanced qualifier requirements, changes in expectation management, and strictness controls, users can refactor their mocks and tests confidently. This ensures smooth upgrades and sustained test correctness across versions.
+
+---
+
+*For detailed troubleshooting and migration assistance, refer to the linked documentation and consider running tests with gMock verbose mode to gain actionable insights.*
