--- a/changelog/breaking-changes-and-migration/deprecations-and-removals.mdx
+++ b/changelog/breaking-changes-and-migration/deprecations-and-removals.mdx
@@ -1,155 +1,180 @@
 ---
-title: "Deprecations & Removals"
-description: "Catalog of APIs and features that have been deprecated or removed, including timelines and recommended migration paths. Stay ahead of the curve by adjusting to forward-looking changes."
+title: "Deprecations and Feature Removals"
+description: "List of deprecated features, planned removals, and timelines for sunsetting old APIs. Provides actionable recommendations for updating your usage to supported equivalents."
 ---
 
-# Deprecations & Removals
+# Deprecations and Feature Removals
 
-Welcome to the Deprecations & Removals catalog, your authoritative reference for tracking APIs and features within GoogleMock that have been deprecated or removed. This page is designed to empower you to proactively manage your test codebase and stay aligned with GoogleMock’s evolution.
-
-By consulting this page, you’ll gain insight into:
-
-- **Which APIs and features are deprecated or gone.**
-- **When these deprecations or removals took effect.**
-- **Recommended migration paths and alternatives.**
+This page outlines features in GoogleMock that have been deprecated or scheduled for removal, including APIs, macros, and behaviors that users should update or migrate away from. It also provides clear timelines for sunsetting these features and actionable recommendations to transition your code to supported equivalents.
 
 ---
 
-## Understanding Deprecations & Removals
+## Understanding Deprecations and Removals
 
-Software inevitably evolves, and sometimes features or APIs must be retired to keep the testing framework robust, modern, and maintainable. This page focuses exclusively on GoogleMock APIs and capabilities that have been marked for eventual end-of-life.
+GoogleMock maintains a commitment to evolve and improve while ensuring stability. We periodically deprecate older features that no longer align with modern usage, best practices, or maintenance goals. This page documents those changes to help you avoid surprises and smoothly upgrade your tests.
 
-Staying informed here ensures you avoid surprises and can smoothly adapt your test code to leverage newer, improved constructs.
+You should review this page regularly to:
 
----
-
-## Typical User Journey: Managing Deprecated Features
-
-Imagine you have a legacy test suite that uses an older mock method macro or relies on deprecated behaviors around expectations and default actions. You want to upgrade GoogleMock or improve your usage to comply with the latest standards to enjoy improved maintainability and performance.
-
-This page offers:
-
-- **Timelines:** Clear indication of when support for older features will cease or has ceased.
-- **Migration Guidance:** Practical advice on how to transition from deprecated APIs to their modern replacements, ensuring your mock definitions and test assertions continue to work flawlessly.
+- Identify deprecated features you currently use.
+- Learn migration paths to supported APIs.
+- Plan updates ahead of removal deadlines.
 
 ---
 
-## Deprecation and Removal Highlights
+## Deprecated Features and Planned Removals
 
-### Deprecated Macros and Patterns
+### 1. Old-Style MOCK_METHODn Macros
 
-Older-style mock macros like `MOCK_METHODn` have been deprecated in favor of the unified `MOCK_METHOD` macro, which provides clearer syntax and better support for qualifiers and complex type signatures. You are encouraged to migrate mock classes to use the newer syntax to benefit from improved readability and maintainability.
+The classic family of `MOCK_METHODn` macros has been superseded by the more powerful and flexible `MOCK_METHOD` macro.
 
-**Migration Tip:** Replace uses of legacy `MOCK_METHODn` macros with the generic `MOCK_METHOD` form, matching the method signature explicitly, including any necessary qualifiers such as `const` or `override`.
+- **Status:** Deprecated since 2018, but still supported for backward compatibility.
+- **Impact:** Using `MOCK_METHODn` is discouraged. Your mock classes should migrate to `MOCK_METHOD` which provides better parsing, qualifiers, and extensibility.
+- **Migration:** Replace lines like:
 
-### Behavioral Changes in Uninteresting Calls
+  ```cpp
+  MOCK_METHOD1(Foo, bool(int));
+  MOCK_CONST_METHOD1(Bar, void() const);
+  ```
 
-The default behavior of uninteresting mock calls—calls to mock methods for which no explicit expectation was set—has been clarified and streamlined. GoogleMock now supports distinguishing among “nice”, “naggy”, and “strict” mock objects, affecting whether uninteresting calls generate warnings or test failures.
+  with:
 
-**Action:** Use `NiceMock<T>`, `NaggyMock<T>`, or `StrictMock<T>` wrappers around your mock classes depending on your desired level of strictness around mock method calls with no explicit expectations.
+  ```cpp
+  MOCK_METHOD(bool, Foo, (int), (override));
+  MOCK_METHOD(void, Bar, (), (const, override));
+  ```
 
-### Verification and Lifecycle Updates
+- **Recommendation:** Transition all mock classes to `MOCK_METHOD` to future-proof your tests and leverage enhanced functionality.
 
-Advancements in mock lifecycle management have introduced improved ways to force verification of mock object expectations before destruction using `Mock::VerifyAndClearExpectations()`. This is critical for tests where a mock’s lifetime is managed outside the test scope and helps avoid silent test gaps caused by leaked or improperly cleaned-up mocks.
+### 2. Implicit Default Actions Without ON_CALL
 
-**Best Practice:** Regularly invoke `Mock::VerifyAndClearExpectations()` on mocks you create on the heap to ensure early failure reporting and prevent hidden expectation violations.
+Relying on default built-in behavior without explicitly setting `ON_CALL` for default actions may cause unexpected warnings or fragile tests.
 
-### Removal of Old Mocking Syntax and Practices
+- **Status:** This practice is now discouraged.
+- **Impact:** Uninteresting calls without an explicit `ON_CALL` may produce warnings and can obscure test intent.
+- **Migration:** Define default behaviors explicitly with `ON_CALL(mock_obj, Method(args)).WillByDefault(action)` to clearly communicate expected default behavior.
 
-Older idioms such as creating mock methods in non-public sections or mocking of free functions without using interfaces have been deprecated. Direct mocking of free functions is unsupported, and you should introduce interfaces with virtual methods instead.
+### 3. Uninteresting Call Warnings Without Controls
 
-**Recommendation:** Refactor your codebase to embrace interface-based designs to enable effective mocking.
+By default, uninteresting calls (calls to mock methods with no expectations) generate warnings.
+
+- **Status:** This default is intended, but you may opt for quieter behavior.
+- **Impact:** Excess warnings may clutter test output.
+- **Migration:** Use `NiceMock<T>` to suppress these warnings when they generate noise but do not indicate an error.
+
+### 4. Expectation Order and Sticky Expectations
+
+The default sticky behavior of expectations means they remain active after reaching their expected number of calls, which may differ from other frameworks.
+
+- **Status:** Design choice, but users should be aware.
+- **Impact:** Misunderstanding this can cause unexpected errors or brittle tests.
+- **Migration:** Use `.RetiresOnSaturation()` or sequence constraints (`InSequence`) to control expectation activation and lifecycle precisely.
+
+### 5. Mock Method Visibility
+
+Mock methods must be declared in the `public:` section of mock classes, even if the base method is private or protected.
+
+- **Status:** Always required; not deprecated but a common pitfall.
+- **Impact:** Violating this causes compilation or runtime failures.
+- **Recommendation:** Verify all `MOCK_METHOD` declarations are in public scope.
 
 ---
 
-## Timeline and Migration Paths
+## Timelines for Sunsetting Deprecated Features
 
-| Feature / API                      | Status          | Removal Timeline     | Migration Action                                           |
-|----------------------------------|-----------------|---------------------|------------------------------------------------------------|
-| `MOCK_METHODn` macros            | Deprecated      | Scheduled for removal in upcoming major release | Refactor to use unified `MOCK_METHOD` macro syntax          |
-| Legacy unprotected commas in signatures | Deprecated | Use modern parentheses wrapping now             | Wrap complex types in parentheses or use type aliases       |
-| Uninteresting call default warning behavior | Adjusted behavior since recent releases | N/A                     | Use `NiceMock` or `StrictMock` to control warnings/errors  |
-| Direct mocking of free functions  | Deprecated      | No direct support; encourage interface usage    | Encapsulate free functions in interfaces and mock them      |
-| Implicit default return values    | Updated defaults| Ongoing               | Use `ON_CALL` to explicitly specify desired default behavior|
+| Deprecated Feature             | Deprecated Since | Planned Removal | Recommended Action                        |
+|-------------------------------|------------------|-----------------|-----------------------------------------|
+| `MOCK_METHODn` Macros          | 2018             | TBD             | Migrate to `MOCK_METHOD` macro          |
+| Default Action Without `ON_CALL` | N/A              | N/A             | Explicitly specify with `ON_CALL`       |
+| Uninteresting Call Warnings    | N/A              | N/A             | Use `NiceMock` or suppress warnings     |
+
+_Removal dates are subject to update; please consult the latest official release notes and migration guides._
 
 ---
 
-## Practical Migration Examples
+## Actionable Recommendations
 
-### Migrating from `MOCK_METHODn` Macros
+### Updating Mock Methods
 
-**Old syntax:**
+Audit your mock class definitions and:
+
+- Replace all instances of `MOCK_METHODn` macros with `MOCK_METHOD`.
+- Wrap any argument types with commas in parentheses or use type aliases to avoid compilation issues.
+- Ensure all mock methods reside in `public:` sections.
+
+### Explicit Default Actions
+
+Define default behaviors with `ON_CALL` to avoid warnings and to make the intent of test behavior clear.
+
+Example:
+
 ```cpp
-MOCK_METHOD1(Foo, bool(int));
+ON_CALL(mock_obj, Compute(_)).WillByDefault(Return(42));
 ```
 
-**New syntax:**
-```cpp
-MOCK_METHOD(bool, Foo, (int));
-```
+### Controlling Mock Strictness
 
-Add qualifiers if needed:
-```cpp
-MOCK_METHOD(bool, Foo, (int), (const, override));
-```
+- If uninteresting call warnings clutter output but do not reflect errors, consider wrapping mocks in `NiceMock<>`.
+- Use `StrictMock<>` to treat uninteresting calls as errors when strict enforcement is desired.
 
-### Handling Complex Types with Commas
+### Managing Expectation Order
 
-When mocking methods returning or accepting types with commas, wrap types in an extra pair of parentheses or use type aliases:
+- Use `.RetiresOnSaturation()` to make expectations retire after the specified number of calls.
+- Use `InSequence` to enforce call order explicitly and avoid test brittleness.
+
+Example:
 
 ```cpp
-using BoolAndInt = std::pair<bool, int>;
-MOCK_METHOD(BoolAndInt, GetPair, ());
+{
+  InSequence s;
+  EXPECT_CALL(mock_obj, Start()).WillOnce(Return());
+  EXPECT_CALL(mock_obj, Stop()).WillOnce(Return());
+}
 ```
 
-or
+### Checking for Deprecated Usage
 
-```cpp
-MOCK_METHOD((std::pair<bool, int>), GetPair, ());
-```
-
-### Controlling Default Mock Call Behavior
-
-To suppress warnings on uninteresting calls:
-```cpp
-NiceMock<MyMockClass> mock;
-```
-
-To treat uninteresting calls as failures:
-```cpp
-StrictMock<MyMockClass> mock;
-```
-
-### Forcing Early Verification
-
-If your tests create mocks on the heap and the test does not guarantee destruction:
-```cpp
-Mock::VerifyAndClearExpectations(mock_ptr);
-```
-Call this before your verification phase to ensure all expectations were met.
+Enable verbose logging with `--gmock_verbose=info` during test runs to identify unexpected calls and deprecated patterns.
 
 ---
 
-## Troubleshooting Common Deprecation Issues
+## Troubleshooting and Common Pitfalls
 
-- **Parsing errors in `MOCK_METHOD`:** Wrap complex argument list types with parentheses or define clear type aliases.
-- **Unexpected warnings about uninteresting calls:** Consider switching to `NiceMock` if the warnings are noise, or `StrictMock` if strict validation is needed.
-- **Mocking free functions directly fails:** Wrap the function calls in an interface and mock that interface instead.
-- **Test failures post-upgrade complaining about missing expectations:** Check your expectations and possibly add `ON_CALL` defaults or adapt expectations to new mock behaviors.
+### Warning: Uninteresting Mock Function Call
 
----
+If this warning appears, it means a mock function was called without an expectation set. Confirm this is acceptable or add an expectation accordingly.
 
-## Staying Ahead
+### Compiler Warnings for Const Parameters
 
-Keep this page bookmarked and review it regularly to catch new deprecations early. Align your test code proactively with recommended migration paths to maintain robustness and compatibility.
+When mocking methods with const parameters, note that top-level consts on parameters are ignored by C++ and should be omitted in mocks to avoid compiler warnings.
 
-For comprehensive understanding and up-to-date migration support, refer to the following resources:
+### Multiple EXPECT_CALL with Overlapping Matchers
 
-- [gMock Cookbook](https://github.com/google/googletest/blob/main/docs/gmock_cook_book.md)
-- [Mocking Reference](https://github.com/google/googletest/blob/main/docs/reference/mocking.md)
-- [Breaking Changes & Migration](https://github.com/google/googletest/blob/main/changelog/breaking-changes-and-migration/breaking-changes.md)
-- [Effective Mocking Techniques Guide](/guides/core-workflows/mocking-techniques)
+Remember gMock chooses the last matching expectation by default. Put more specific expectations after more general ones.
 
 ---
 
-By embracing these changes, your testing will remain reliable, future-proof, and aligned with GoogleMock’s best practices, enabling your team to deliver high-quality software with confidence.
+## Migration and Upgrade Resources
+
+- See the [Breaking Changes](https://google.github.io/googletest/changelog/breaking-changes-and-migration/breaking-changes) page for detailed migration instructions.
+- Consult the [Mock Method Macros](https://google.github.io/googletest/api/gmock_mock-methods.html) reference for modern syntax.
+- Review the [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) for practical examples and best practices.
+
+---
+
+## Related Documentation
+
+- [Mocking Reference](https://google.github.io/googletest/api/gmock_mocking.html)
+- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
+- [Mocking Basics Guide](https://google.github.io/googletest/guides/core-workflows/mocking-basics)
+- [Breaking Changes](https://google.github.io/googletest/changelog/breaking-changes-and-migration/breaking-changes)
+- [gMock Cheat Sheet](https://google.github.io/googletest/gmock_cheat_sheet.html)
+- [Troubleshooting Common Issues](https://google.github.io/googletest/getting-started/troubleshooting-validation/common-issues)
+
+---
+
+## Summary
+GoogleMock periodically deprecates outdated features to maintain code quality and user experience. This page details deprecated constructs like the older `MOCK_METHODn` macros, implicit default actions without explicit `ON_CALL`, and uninteresting call warnings. It offers clear migration tips, timelines, and practical advice to help users update their mocking setups, ensuring smoother maintenance and future compatibility.
+
+---
+
+_Last Updated: [Refer to latest release notes]_
